Change heading text for on vary evidence screen

--- a/server/views/vary/evidence.pug
+++ b/server/views/vary/evidence.pug
@@ -1,7 +1,7 @@
 extends ../formTemplates/formTemplate
 
 block question
-  | Provide evidence you have approval to vary this licence
+  | Provide justification for the selected conditions and evidence you have approval to vary this licence
 
 block formItems
   div.pure-g
