Change email address in footer from beta email to hdcdigitalservice@digital.justice.gov.uk

--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -77,7 +77,7 @@ html(lang="en")
       div(class="hdc-footer-wrapper")
         p#sm-contactUs
           span.bold.hideMobile Contact us:&nbsp;
-          a(href="mailto:hdc_private_beta_support@digital.justice.gov.uk") hdc_private_beta_support@digital.justice.gov.uk
+          a(href="mailto:hdcdigitalservice@digital.justice.gov.uk") hdcdigitalservice@digital.justice.gov.uk
         div(class="footer-meta")
           div(class="footer-meta-inner")
             div(class="open-government-licence")
