--- a/server/views/approval/release.pug
+++ b/server/views/approval/release.pug
@@ -50,7 +50,7 @@ block content
                 label(for="releaseNo") No, I refuse
 
             else
-              div.multiple-choice
+              div.multiple-choice(data-target="decisionReasonForm")
                 input#releaseYes(type="radio" checked=releaseValue === 'Yes'  name="decision" value="Yes")
                 label(for="releaseYes") Yes, I approve
 
@@ -58,8 +58,16 @@ block content
                 input#releaseNo(type="radio" checked=releaseValue === 'No' name="decision" value="No")
                 label(for="releaseNo") No, I refuse
 
-            div#releaseForm.panel.panel-border-narrow.js-hidden
-              include includes/release
+            div#releaseForm.js-hidden
+              div.panel
+                include includes/release
+              div.panel
+                include includes/decisionReason
+
+            div#decisionReasonForm.js-hidden
+              div.panel
+                include includes/decisionReason
+
 
           div.paddingBottom.smallPaddingTop
             input#continueBtn.requiredButton.button(type="submit" value="Save and continue")
