LIC-1068 Case list status not changing to Licence Created

--- a/server/views/pdf/tasks/createLicenceTask.pug
+++ b/server/views/pdf/tasks/createLicenceTask.pug
@@ -33,7 +33,7 @@ div.paddingBottom
 
     if canPrint
       div.pure-u-1.pure-u-md-1-4.center
-        a#createPdf.taskListAction.center.button(href="/hdc/pdf/create/" + templateName + "/" + bookingId
+        a#createPdf.taskListAction.center.button(href="/hdc/pdf/create/" + bookingId
         role="button"
         target="_blank"
         onClick="setTimeout(function(){javascript:window.location.reload()}, 200)") Create licence
