--- a/server/views/pdf/tasks/reportingTask.pug
+++ b/server/views/pdf/tasks/reportingTask.pug
@@ -11,7 +11,7 @@ div.paddingBottom
       else
         | Complete
     div.pure-u-1.pure-u-md-1-4.center
-      +startContinueChange(buttonState, "/hdc/reporting/reportingDate/" + templateName + "/" + prisoner.bookingId)
+      +startContinueChange(buttonState, "/hdc/reporting/reportingDate/" + prisoner.bookingId)
 
 
 
