--- a/server/views/pdf/tasks/sentenceInfoTask.pug
+++ b/server/views/pdf/tasks/sentenceInfoTask.pug
@@ -9,7 +9,7 @@ div.paddingBottom
       div.pure-u-1.pure-u-md-3-4#sentenceTaskStatus
         | Not complete
       div.pure-u-1.pure-u-md-1-4.center
-        +startContinueChange('UNSTARTED', "/hdc/pdf/missing/sentenceInfo/" + templateName + "/" + prisoner.bookingId)
+        +startContinueChange('UNSTARTED', "/hdc/pdf/missing/sentenceInfo/" + prisoner.bookingId)
     else
       div.pure-u-1.pure-u-md-3-4#sentenceTaskStatus
         | Complete
