--- a/server/views/pdf/tasks/varyApprovalTask.pug
+++ b/server/views/pdf/tasks/varyApprovalTask.pug
@@ -11,4 +11,4 @@ div.paddingBottom
       else
         | Complete
     div.pure-u-1.pure-u-md-1-4.center
-      +startContinueChange(buttonState, "/hdc/vary/approval/" + templateName + "/" + prisoner.bookingId)
+      +startContinueChange(buttonState, "/hdc/vary/approval/" + prisoner.bookingId)
