DCS-205 User now able to record Drugs, Health and Behaviours
Previously user could only record details of a course or support organisation that would help prisoner with their rehabilitaion needs.
Now the actual needs, such as alcohol abuse, gambling, debt, offending behaviour etc can also be recorded.
Once recorded, the user is able to view the prisoner's rehabilitaion needs both on-line and also in the PDF of the Licence (under the Licence Conditions section). The PDF is also given to the prisoner.

DCS-205: Changed R.path to getIn. Also ensured spacing of behaviours correct in generated pdf form

--- a/server/views/licenceConditions/includes/appointmentName.pug
+++ b/server/views/licenceConditions/includes/appointmentName.pug
@@ -6,13 +6,13 @@ div.pure-g.paddingBottom
 
 div.inline
   div.multiple-choice
-    input(id='psychiatrist' type='radio' name='appointmentProfession' value='psychiatrist' checked=condition.user_submission && condition.user_submission.appointmentProfession === 'Psychiatrist')
+    input(id='psychiatrist' type='radio' name='appointmentProfession' value='psychiatrist' checked=condition.user_submission && condition.user_submission.appointmentProfession === 'psychiatrist')
     label(for='psychiatrist') Psychiatrist
 
   div.multiple-choice
-    input(id='psychologist' type='radio' name='appointmentProfession' value='psychologist' checked=condition.user_submission && condition.user_submission.appointmentProfession === 'Psychologist')
+    input(id='psychologist' type='radio' name='appointmentProfession' value='psychologist' checked=condition.user_submission && condition.user_submission.appointmentProfession === 'psychologist')
     label(for='psychologist') Psychologist
 
   div.multiple-choice
-    input(id='medicalPractitioner' type='radio' name='appointmentProfession' value='medical practitioner' checked=condition.user_submission && condition.user_submission.appointmentProfession === 'Medical practitioner')
+    input(id='medicalPractitioner' type='radio' name='appointmentProfession' value='medical practitioner' checked=condition.user_submission && condition.user_submission.appointmentProfession === 'medical practitioner')
     label(for='medicalPractitioner') Medical practitioner
