--- a/server/views/review/includes/additionalConditions.pug
+++ b/server/views/review/includes/additionalConditions.pug
@@ -26,7 +26,10 @@ mixin additionalConditions(editable)
             if item.text
               | !{item.text}
             if item.variable
-              span.bold #{item.variable}
+              if (Array.isArray(item.variable))
+                span.bold #{item.variable.join(', ')}
+              if (typeof(item.variable) === 'string')
+                span.bold #{item.variable}
             if item.error
               span.bold.alert #{item.error}
 
