DCS-262 Adding screens to allow displaying and acknowledgement of warnings

--- a/server/views/admin/index.pug
+++ b/server/views/admin/index.pug
@@ -15,4 +15,6 @@ block content
         a(href='/admin/jobs') Batch jobs
       div
         a(href='/admin/delius') Delius API search
+      div
+        a(href='/admin/warnings/outstanding') View Warnings
 
