--- a/server/views/contact/deliusRo.pug
+++ b/server/views/contact/deliusRo.pug
@@ -8,25 +8,26 @@ block content
 
   div.pure-g.largePaddingBottom
     div.pure-u-1
-      div.pure-u-2-3
-        h2.heading-large.midPaddingBottom Responsible officer
+      div.purge-g
+        div.pure-u-2-3
+          h2.heading-large.midPaddingBottom Responsible officer
 
-      div.pure-u-1
-        if (ro)
-          div.pure-u-1
-            table#contact.largeMarginBottom
-              thead
-                tr
-                  th Name
-                  th Local Delivery Unit
-                  th Probation area
-                  th Functional mailbox
-              tbody
-                tr.contact
-                  td.name #{ro.name}
-                  td.organisation #{ro.lduDescription} (#{ro.lduCode})
-                  td #{ro.probationAreaDescription} (#{ro.probationAreaCode})
-                  td.email #{functionalMailbox}
+        div.pure-u-2-3
+          if (ro)
+            div.pure-u-1-3.sm-midPaddingBottom Name
+            div.pure-u-2-3.bold #{ro.name}
 
-        else
-          p No contact details found
+            div.pure-u-1-3.sm-midPaddingBottom Local Delivery Unit
+            div.pure-u-2-3.bold #{ro.lduDescription} (#{ro.lduCode})
+
+            div.pure-u-1-3.sm-midPaddingBottom Probation area
+            div.pure-u-2-3.bold #{ro.probationAreaDescription} (#{ro.probationAreaCode})
+
+            div.pure-u-1-3.sm-midPaddingBottom Email
+            div.pure-u-2-3.bold #{email}
+
+            div.pure-u-1-3.sm-midPaddingBottom Functional mailbox
+            div.pure-u-2-3.bold #{functionalMailbox}
+
+          else
+            p No contact details found
