DCS-264: error messages moved to top of page

--- a/server/views/taskList/taskListTemplate.pug
+++ b/server/views/taskList/taskListTemplate.pug
@@ -33,6 +33,15 @@ block content
   if !user.role
     p Error
   else
+    if errorObject
+    div.largeMarginBottom
+    if errorObject && Object.keys(errorObject).length !== 0
+      div.error-summary(role="alert" aria-labelledby="error-summary-heading" tabindex="-1")
+        h2.heading-medium.error-summary-heading.center.noMargin.smallPaddingTopBottom#error-summary-heading
+          | There is a problem
+        ul.error-summary-list
+          each errorMsg in errorObject
+            li.error #{errorMsg}
     include prisonerDetails
 
     div.paddingBottom
