DCS-264: updates as per comments in PR
Key changes:
1. The error objects are now an array. If there are no errors, the return is [] noy null
2. predifined tasks in the elibility tasklist if any errors are identified.

--- a/server/views/taskList/taskListTemplate.pug
+++ b/server/views/taskList/taskListTemplate.pug
@@ -33,15 +33,14 @@ block content
   if !user.role
     p Error
   else
-    if errorObject
-    div.largeMarginBottom
-    if errorObject && Object.keys(errorObject).length !== 0
-      div.error-summary(role="alert" aria-labelledby="error-summary-heading" tabindex="-1")
-        h2.heading-medium.error-summary-heading.center.noMargin.smallPaddingTopBottom#error-summary-heading
-          | There is a problem
-        ul.error-summary-list
-          each errorMsg in errorObject
-            li.error #{errorMsg}
+    if errors 
+      div.largeMarginBottom
+        div.error-summary(role="alert" aria-labelledby="error-summary-heading" tabindex="-1")
+          h2.heading-medium.error-summary-heading.center.noMargin.smallPaddingTopBottom#error-summary-heading
+            | There is a problem
+          ul.error-summary-list
+            each errorMsg in errors
+              li.error #{errorMsg}
     include prisonerDetails
 
     div.paddingBottom
