--- a/server/views/taskList/taskListTemplate.pug
+++ b/server/views/taskList/taskListTemplate.pug
@@ -33,6 +33,14 @@ block content
   if !user.role
     p Error
   else
+    if errors 
+      div.largeMarginBottom
+        div.error-summary(role="alert" aria-labelledby="error-summary-heading" tabindex="-1")
+          h2.heading-medium.error-summary-heading.center.noMargin.smallPaddingTopBottom#error-summary-heading
+            | There is a problem
+          ul.error-summary-list
+            each errorMsg in errors
+              li.error #{errorMsg}
     include prisonerDetails
 
     div.paddingBottom
