--- a/server/views/taskList/taskListTemplate.pug
+++ b/server/views/taskList/taskListTemplate.pug
@@ -33,7 +33,7 @@ block content
   if !user.role
     p Error
   else
-    if errors 
+    if errors && errors.length > 0
       div.largeMarginBottom
         div.error-summary(role="alert" aria-labelledby="error-summary-heading" tabindex="-1")
           h2.heading-medium.error-summary-heading.center.noMargin.smallPaddingTopBottom#error-summary-heading
