--- a/server/views/taskList/taskListBuilder.pug
+++ b/server/views/taskList/taskListBuilder.pug
@@ -1,5 +1,6 @@
 extends taskListTemplate
 include vary/standardTask
+include tasks/caBlockedTask
 
 block tasks
   each task in taskListModel
@@ -17,3 +18,6 @@ block tasks
 
       if taskName === 'varyLicenceTask'
         include tasks/varyLicenceTask
+
+      if taskName === 'caBlockedTask'
+        + caBlockedTask(task)
