DCS-265: display message when LDU updated successfully

--- a/server/views/admin/index.pug
+++ b/server/views/admin/index.pug
@@ -18,4 +18,4 @@ block content
       div
         a(href='/admin/warnings/outstanding') View Warnings
       div
-        a(href='/admin/locations/probation-areas') Probation areas
+        a(href='/admin/locations/probation-areas') Manage locations
