DCS-328: Ldus reorganised and  duplicates removed
http://localhost:3000/admin/locations/probation-areas
Probation area code appended to name

http://localhost:3000/admin/locations/probation-areas/:code/local-delivery-units
Ldus filtered by code to remove any duplicates. Displayed only first description where the same ldu may have more than one description

Extra padding to bottom of save button

--- a/server/views/admin/locations/ldus.pug
+++ b/server/views/admin/locations/ldus.pug
@@ -24,5 +24,5 @@ block content
               
 
     if probationArea.ldus[0]
-      div.pure-u-1.inlineButtons
+      div.pure-u-1.inlineButtons.largePaddingBottom
         input#continueBtn.requiredButton.button.smallMarginTop(type="submit" value="Save")
