DCS-338 Add new licence search page. This will relies on returning the booking id for existing licences as this is the natural key for licences

--- a/server/views/admin/index.pug
+++ b/server/views/admin/index.pug
@@ -17,3 +17,5 @@ block content
         a(href='/admin/warnings/outstanding') View Warnings
       div
         a(href='/admin/locations/probation-areas') Manage locations
+      div
+        a(href='/admin/licenceSearch') Search for licence
