DCS-332 Adding in history view into the admin licences screen

--- a/server/views/admin/licences/search.pug
+++ b/server/views/admin/licences/search.pug
@@ -18,7 +18,7 @@ block content
         div.pure-u-2-3.midPaddingBottom
           div.pure-g.u-paddingBottom
             div.pure-u-1
-              label.form-label(for="id") Offender Identifier (Offender number or Booking ID)
+              label.form-label(for="id") Offender number or Booking ID
             div.pure-u-sm-5-12
               input.form-control(id="id" type="text" name="id")
             div.pure-u-sm-1-6.sm-PadLeftRight15
