DCS 318: new licence additional condition added to the drugs section
A new condition asking about drugs dependency added to the Drugs, Health and Behaviour section.
The new content is the same as that at the bottom of the page under the Post-sentance section.
The printed licences have also been updated so that the new content appears in either the main section or the PSS section, depending on the licence type

--- a/server/views/licenceConditions/additionalConditions.pug
+++ b/server/views/licenceConditions/additionalConditions.pug
@@ -35,7 +35,7 @@ block content
                       div.multiple-choice(data-target=condition.user_input + '_form')
                         p.namedAnchor
                           a.namedAnchor(name=conditionId)
-                        input(type="checkbox" id="check-" + conditionId value=condition.id name="additionalConditions" checked=condition.selected)
+                        input(type="checkbox" id="check-" + conditionId value=condition.id name='additionalConditions[]' checked=condition.selected)
                         label(for="check-" + conditionId) !{condition.text}
 
                     if condition.user_input
@@ -54,4 +54,3 @@ block content
 
 block append scripts
   script(src="/public/javascripts/bespokeConditionsClient.js?" + version)
-
