--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -9,6 +9,9 @@ div.form-group
   if formItem === 'appointmentDetails'
     include appointmentDetails
 
+  if formItem === 'appointmentDetailsInDrugsSection'
+    include appointmentDetailsInDrugsSection
+
   if formItem === 'attendSampleDetails'
     include attendSampleDetails
 
