DCS-331 backend work to support admin staff sending emails to ROs
This will allow a frontend to be developed to allow sending emails to new linked RO users.
The original work to transition the state and reset any decisions will have already occurred when the CA handed over the case.

The original handover will have triggered a SEND audit event using the PCA username.
This will trigger a NOTIFY event with the admin staffs username.
It will also attempt to assign the HDC Update role to the RO's delius user.

This new service method will return the RO to provide some contextual information on success.
Otherwise it will return the error for display to the user.
Unlike the existing service method it will error if the user is not linked - the assumption will
be that this will only be called once the user is linked

--- a/server/views/admin/licences/activity.pug
+++ b/server/views/admin/licences/activity.pug
@@ -19,10 +19,18 @@ mixin send(details)
           | Sent from CA → RO
       when 'roToCa'
           | Sent from RO → CA
+      when 'roToCaAddressRejected'
+          | Sent from RO → CA (Address rejected)
+      when 'roToCaOptedOut'
+          | Sent from RO → CA (Opted out)
       when 'caToDm'
           | Sent from CA → DM
+      when 'caToDmRefusal'
+          | Sent from CA → DM (Refusal)
       when 'dmToCa'
           | Sent from DM → CA
+      when 'dmToCaReturn'
+          | Sent from DM → CA (Return)
       default
           | #{transitionType}
 
@@ -65,7 +73,7 @@ div.borderBottom.paddingBottom
         th Details
     tbody
         each event in events
-          tr.hdcEligible
+          tr
           td.link
               a(id='event-'+ event.id  href='/admin/licences/events/' + event.id + '/raw') #{event.timestamp}
           td.user
