DCS-319 New checkbox option added
http://localhost:3000/hdc/licenceConditions/additionalConditions/{bookingId}

New checkbox for 'drug abuse' added to the 'comply' component of the Drugs Health,and Behaviour section.

Unnecessary comments removed from appointmentDetails.pug

--- a/server/views/licenceConditions/includes/courseOrCentre.pug
+++ b/server/views/licenceConditions/includes/courseOrCentre.pug
@@ -10,6 +10,10 @@ div.govuk-fieldset
   div.multiple-choice
     input(id='alcoholAbuse' type='checkbox' name='abuseAndBehaviours' value='alcohol abuse' checked=behaviours.includes('alcohol abuse'))
     label(for='alcoholAbuse') alcohol abuse
+  
+  div.multiple-choice
+    input(id='drugAbuse' type='checkbox' name='abuseAndBehaviours' value='drug abuse' checked=behaviours.includes('drug abuse'))
+    label(for='drugAbuse') drug abuse
 
   div.multiple-choice
     input(id='sexualAbuse' type='checkbox' name='abuseAndBehaviours' value='sexual abuse' checked=behaviours.includes('sexual abuse'))
