--- a/server/views/proposedAddress/rejected.pug
+++ b/server/views/proposedAddress/rejected.pug
@@ -1,5 +1,6 @@
 extends ../layout
 include ../includes/alternativeForm
+include ../includes/errorBannerWithDetailObject
 
 block content
 
@@ -14,14 +15,7 @@ block content
 
     h2.heading-large Curfew address rejected
     p The following address has been returned by the Responsible Officer:
-      if errorMessage
-        div.pure-g
-          div.error-summary.pure-u-1.pure-u-md-1-2(role="alert" aria-labelledby="error-summary-heading" tabindex="-1")
-            h2.heading-medium.error-summary-heading#error-summary-heading
-              | There is a problem
-            ul.error-summary-list
-                li
-                  a(href="#enterAlternativeYes")  #{errorMessage}
+      +errorBannerWithDetail(errorObject, [{ field: 'enterAlternative' }])
 
     div.pure-g.borderBottomLight
       div.pure-u-1.pure-u-md-1-2
