DCS-347: user must select a radio button before they can move on (#1089)
* DCS-347: user must select a radio button before they can move on
http://localhost:3000/hdc/proposedAddress/rejected/{bookingId}

Previously user could 'save and continue' without selecting the yes/no radio. This was incorrect  behaviour so have added validation checking. Now user is redirected back to the same page until they make a selection

* DCS-347: Changes following PR comments

* dcs-347: updated groovy test

* DCS-347: changes following PR comments
1. changed variable name in GEB tests from proposedAddressRejectedButton to continueButton.
2. introduced new Jest tests to validate 3 routes

--- a/server/views/proposedAddress/rejected.pug
+++ b/server/views/proposedAddress/rejected.pug
@@ -1,5 +1,6 @@
 extends ../layout
 include ../includes/alternativeForm
+include ../includes/errorBannerWithDetailObject
 
 block content
 
@@ -7,12 +8,14 @@ block content
   -var addressReview = data.curfew && data.curfew.curfewAddressReview || {}
   -var risk = data.risk && data.risk.riskManagement || {}
   -var savedData = data.proposedAddress && data.proposedAddress.rejected && data.proposedAddress.rejected.enterAlternative || {}
+  -var errorMessage = errorObject.enterAlternative
 
   div.pure-g.pure-u-1
     include ../includes/back
 
     h2.heading-large Curfew address rejected
     p The following address has been returned by the Responsible Officer:
+      +errorBannerWithDetail(errorObject, [{ field: 'enterAlternative' }])
 
     div.pure-g.borderBottomLight
       div.pure-u-1.pure-u-md-1-2
