DCS-362 Amend wording to presumed unsuitable reason

--- a/server/views/eligibility/includes/suitability.pug
+++ b/server/views/eligibility/includes/suitability.pug
@@ -32,4 +32,4 @@ block unsuitableForm
             li - Possession of firearms with intent
             li - Cruelty to Children
             li - Racially aggravated offences
-            li - Terrorism
+            li - Terrorism related offences not listed in schedule ZA of the Criminal Justice Act 2003
