--- a/server/views/contact/deliusRo.pug
+++ b/server/views/contact/deliusRo.pug
@@ -17,6 +17,9 @@ block content
             div.pure-u-1-3.sm-midPaddingBottom Name
             div.pure-u-2-3.bold #{ro.name}
 
+            div.pure-u-1-3.sm-midPaddingBottom Staff code
+            div.pure-u-2-3.bold #{ro.deliusId}
+
             div.pure-u-1-3.sm-midPaddingBottom Local Delivery Unit
             div.pure-u-2-3.bold #{ro.lduDescription} (#{ro.lduCode})
 
