DCS-240 - the RO tasklist page displays Forms link http://localhost:3000/hdc/taskList/{bookng id}
The Forms link was previously only displayed to CA's.
The link is also now presented to RO's beccause they need access to the forms.

--- a/server/views/taskList/taskListTemplate.pug
+++ b/server/views/taskList/taskListTemplate.pug
@@ -12,7 +12,7 @@ include ./includes/utils
 
 block content
 
-  if user.role === 'CA' && licenceVersion !== 0
+  if licenceVersion !== 0 && (user.role === 'RO' || user.role === 'CA')
     include ../includes/back-caselist-and-forms
   else
     include ../includes/backToCaseList
